--- a/coop/forked_deer/smill_creek_f07334.html
+++ b/coop/forked_deer/smill_creek_f07334.html
@@ -23,6 +23,9 @@ var map = new mapboxgl.Map({
     center: [-89.5,35.9]  
 });
 
+var ml_substat = 'mill_creek'
+var ml_feeder = '07_334'
+
 var cable_url = 'mapbox://feomike.brmw4c34' 
 var cable_source_layer = 'mb_smill_creek_f07_334_cable-d0ew8b' 
 
