--- a/coop/cemc/sim_f344.html
+++ b/coop/cemc/sim_f344.html
@@ -58,6 +58,26 @@ var seqColor = '#A9A9A9' //'#FFA500'
 var strandTextColor = '#545454' //'#FFA500'
 var strandLineColor = '#dcdcdc' //'#FFA500'
 
+var myBlue = '#0000FF'
+var myOrange = '#FFA500'
+var myGreen = '#008000'
+var myBrown = '#894444'
+var mySlate = '#808080'
+var myWhite = '#FFFFFF'
+var myRed = '#FF0000'
+var myBlack = '#000000'
+var myYellow = '#FFFF00'
+var myViolet = '#EE82EE'
+var myRose = '#FFC0CB'
+var myAqua = '#00FFFF'
+var spanColor = '#800080'
+var tapColor = '#bababa'//'#c4c4c4'
+var spanAerial = '#551a8b' //purple
+var spanUnder = '#FFA500'
+var seqColor = '#A9A9A9' //'#FFA500'
+var strandTextColor = '#545454' //'#FFA500'
+var strandLineColor = '#dcdcdc' //'#FFA500'
+
 //remember shapefile fields need to be upper case for mapbox to recognize them
 //cable-96
 map.on('load', function () {
