updating semo prj

--- a/coop/semo/s12_f2.html
+++ b/coop/semo/s12_f2.html
@@ -19,27 +19,27 @@ mapboxgl.accessToken = 'pk.eyJ1IjoiZmVvbWlrZSIsImEiOiJNRjJrRmRnIn0.Sc8mxXKYTRfge
 var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/feomike/cj0zcunxh000m2sqb2epkabb4',
-    zoom: 11,
-    center: [-89.5,36.85]  
+    zoom: 13,
+    center: [-89.6,36.565]  
 });
 
-var ml_substat = '13'
-var ml_feeder = '1'
+var ml_substat = '12'
+var ml_feeder = '2'
 
-var cable_url = 'mapbox://feomike.923g7cde' 
-var cable_source_layer = 'semo_cable-d04xs3'
+var cable_url = 'mapbox://feomike.4wj2c27x' 
+var cable_source_layer = 'prj_semo_cable-bihbrz'
 
-var consumers_url = 'mapbox://feomike.5brd8ekq'
-var consumers_source_layer = 'semo_consumers-bjkyq7'
+var consumers_url = 'mapbox://feomike.8tn3ictx'
+var consumers_source_layer = 'prj_semo_consumers-3mevbm'
 
-var splice_can_url = 'mapbox://feomike.2erg7663' 
-var splice_can_source_layer = 'semo_splice_can-aqcxmj' 
+var splice_can_url = 'mapbox://feomike.bsqgxmfl' 
+var splice_can_source_layer = 'prj_semo_splice_can-41uwzl' 
 
-var substat_url = 'mapbox://feomike.dyd10cvq'
-var substat_source_layer = 'semo_substations-0yyo6x'  
+var substat_url = 'mapbox://feomike.2l3gr7jq'
+var substat_source_layer = 'prj_semo_substations-9rl8jk'  
 
-var tap_url = 'mapbox://feomike.d9rvdzcc' 
-var tap_source_layer = 'semo_tap_geo-cfb0aj' 
+var tap_url = 'mapbox://feomike.31wp2qk0' 
+var tap_source_layer = 'prjsemo_tap_geo-5m3q0i' 
 
 var myBlue = '#0000FF'
 var myOrange = '#FFA500'
