adding all forked deer

--- a/coop/forked_deer/scurve_f01244.html
+++ b/coop/forked_deer/scurve_f01244.html
@@ -23,8 +23,8 @@ var map = new mapboxgl.Map({
     center: [-89.55,35.8]  
 });
 
-var ml_substat = 'curve'
-var ml_feeder = '01_244'
+var ml_substat = '01'
+var ml_feeder = '244'
 
 var cable_url = 'mapbox://feomike.1qdehpp8' 
 var cable_source_layer = 'forked_deer_cable-bftp2t'
