--- a/coop/forked_deer/smill_creek_f07324.html
+++ b/coop/forked_deer/smill_creek_f07324.html
@@ -23,8 +23,8 @@ var map = new mapboxgl.Map({
     center: [-89.45,35.946]  
 });
 
-var ml_substat = 'mill_creek'
-var ml_feeder = '07_324'
+var ml_substat = '07'
+var ml_feeder = '324'
 
 var cable_url = 'mapbox://feomike.1qdehpp8' 
 var cable_source_layer = 'forked_deer_cable-bftp2t'
