--- a/coop/forked_deer/snauvoo_f08234.html
+++ b/coop/forked_deer/snauvoo_f08234.html
@@ -23,8 +23,8 @@ var map = new mapboxgl.Map({
     center: [-89.45,36.096]  
 });
 
-var ml_substat = 'nauvoo'
-var ml_feeder = '08_234'
+var ml_substat = '08'
+var ml_feeder = '234'
 
 var cable_url = 'mapbox://feomike.1qdehpp8' 
 var cable_source_layer = 'forked_deer_cable-bftp2t'
