--- a/coop/forked_deer/smill_creek_f07334.html
+++ b/coop/forked_deer/smill_creek_f07334.html
@@ -23,8 +23,8 @@ var map = new mapboxgl.Map({
     center: [-89.5,35.9]  
 });
 
-var ml_substat = 'mill_creek'
-var ml_feeder = '07_334'
+var ml_substat = '07'
+var ml_feeder = '334'
 
 var cable_url = 'mapbox://feomike.1qdehpp8' 
 var cable_source_layer = 'forked_deer_cable-bftp2t'
